# back-tester-2026

./: .gitignore  README.md
.github/workflows/: ci.yml
src/common/: MarketDataEvent.hpp
src/main/: CMakeLists.txt
src/main/ingestion/: MarketDataParser.cpp  MarketDataParser.hpp
test/: CMakeLists.txt  MarketDataParserTest.cpp
